--- a/src/app/Components/Organisms/ScrollBarContent/ScrollBar.module.scss
+++ b/src/app/Components/Organisms/ScrollBarContent/ScrollBar.module.scss
@@ -12,15 +12,6 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-
-    .swiper-slide {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        font-size: 15px;
-        background: #fff;
-    }
 }
 
 
