--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -5,7 +5,6 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: rgb(249, 249, 251);
-
 }
 
 .swiper-button-next,
@@ -16,9 +15,6 @@ body {
     padding-top: 1px;
     padding-bottom: 1px;
     border-radius: 50px;
-}
-
-.swiper-button-next {
     background-repeat: no-repeat;
     background-size: 100% auto;
     background-position: center;
@@ -28,14 +24,6 @@ body {
     color: black !important;
 }
 
-.swiper-button-prev {
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-position: center;
-    left: 5px !important;
-    top: 45px !important;
-    color: black !important;
-}
 
 .swiper-button-next:after {
     font-size: 15px !important;
